fix some padding and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,10 @@ img {
   text-align: center;
 }
 i{
-padding: 0.35em;
   font-size: 31px;
   display: inline-block;
   outline: 1px;
-  margin-bottom: 0.25em;
+  margin-bottom: 0.45em;
   margin-right: 1.6em;
   margin-left: 1.6em;
   font-family: 'icons';
@@ -123,9 +122,8 @@ a:active{
   color: #26c5ff;
 }
 p{
-  margin-left: 10px;
-  margin-right: 3px;
-  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 h3{
   font-size: 22px;
